feat: support double page lecterns